# ZUB_Client

./: README.md
launch/: robot_bringup.launch
msg_pkg/: CMakeLists.txt  package.xml
msg_pkg/msg/: actual.msg  actual_dxl.msg  target.msg  target_dxl.msg
socket_comm/: CMakeLists.txt  package.xml
socket_comm/include/socket_comm/: sock_comm.cpp  sock_comm.hpp  sock_comm_V1.cpp  sock_def.hpp  target_test.cpp  target_test.hpp
socket_comm/src/: main.cpp  target_test_main.cpp
